// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders learn react link 1`] = `
<div
  className="makeStyles-projectItem-1"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "height": "20vw",
      "position": "relative",
      "width": "30vw",
    }
  }
>
  <div
    style={
      Object {
        "background": "url(weather-api.jpeg)",
        "backgroundSize": "contain",
        "filter": "none",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <a
    className="makeStyles-projectLink-3"
    href="https://thawing-beach-25991.herokuapp.com/"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Weather API
  </a>
</div>
`;

exports[`renders project item component 1`] = `
<div
  className="makeStyles-projectItem-1"
  data-testid="parent"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "height": "20vw",
      "position": "relative",
      "width": "30vw",
    }
  }
>
  <div
    style={
      Object {
        "background": "url(weather-api.jpeg)",
        "backgroundSize": "contain",
        "filter": "none",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <a
    className="makeStyles-projectLink-3"
    href="https://thawing-beach-25991.herokuapp.com/"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Weather API
  </a>
</div>
`;
